change logic for storycards, since each storycard will require specific stylings. rename first StoryCard component StoryCardTV. Fix overflow issue with Hero component

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -6,7 +6,7 @@
     z-index: -1;
     top: 0;
 
-    width: 100vw;
+    width: 100%;
     height: 737px;
 }
 
